--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@
 # ----------------------- #
 
 url: http://xiechenny.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: XXX^^XXX Blog
+subtitle: Please smile.
+author: Chenny XIE
 simple_search: https://www.google.com/search
 description:
+Benefit from others, then try to give some feedbacks ^^.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
