--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,8 @@ url: http://xiechenny.github.io
 title: XXX^^XXX Blog
 subtitle: Please smile.
 author: Chenny XIE
-simple_search: https://www.google.com/search
-description:
-Benefit from others, then try to give some feedbacks ^^.
+simple_search: https://www.google.com/search 
+description: Just try to make some feedbacks ^_^b.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
